[tool.poetry]
name = "cipher_dk3154"
version = "0.1.0"
description = "Python package that allows for easy encryption of python strings"
authors = ["Daryl Kow <dk3154@columbia.edu>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
sphinx = "^3.3.0"
sphinxcontrib-napoleon = "^0.7"
pytest = "^6.1.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
